# xpn

./: .clang-format  .eslintrc.yaml  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  ExpandConfig.h.in  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  README_IOT.md  aclocal.m4  autogen.sh  build-me  build-me-compact.sh  build-me.sh  build.sh  clean_conf.sh  compile.sh  conf_doxygen_xpn  conf_generator.py  config.status  configure  configure.ac  configure~  run-servers.sh  u20-dockercompose.yml  u20-dockerfile  u20-dockerstart.sh  xpn  xpn.conf.xml
bypass/: Makefile  (+2 more)
deprecated/: CMakeLists.txt  MakeBones.sh  build-me.sh  create_module.sh  delete_module.sh  postconfigure  preconfigure
deprecated/bypass/old_bypass/: comentar___fxstat64.vim  comentar___lxstat64.vim  comentar___xstat64.vim  comentar_open64.vim  comentar_todo.vim  copia_seguridad.sh
deprecated/bypass/old_bypass/pruebas/: Makefile  prueba-64  prueba-local-30  pruebaDIR.c  prueba_dir.c  prueba_execve.c  prueba_stat-old.c  prueba_stat.c  prueba_stat_normal.binario  prueba_stat_normal.txt
deprecated/external-utils/mpiServer/: mpiServer_utils.h
deprecated/external-utils/mpiServer/_bak/: backport_tcpserver.txt  lanza.sh  mpiserver_op_write_initial.c  xpn.conf.example.xml  xpn2d_lock.c  xpn2xpn_lock.c
deprecated/external-utils/xpnuploader/: Makefile.in  libXpnUploaderClient.h  xpnuploader.wsdl
deprecated/fuse/: Makefile.am  Makefile.in  foo.c
deprecated/src/base/: .MakeBones
deprecated/src/nfi/: .MakeBones
deprecated/src/nfi/common/: .MakeBones
deprecated/src/nfi/nfi_ftp/: .MakeBones
deprecated/src/nfi/nfi_gridftp/: .MakeBones
deprecated/src/nfi/nfi_gsoap/: .MakeBones
deprecated/src/nfi/nfi_local/: TODO
deprecated/src/nfi/nfi_nfs3/: .MakeBones
deprecated/src/nfi/nfi_xio/: .MakeBones
deprecated/src/xpn/: .MakeBones
deprecated/src/xpn/xpn_simple/: .MakeBones
deprecated/src/xpni/xpni_ft/: .MakeBones
deprecated/src/xpni/xpni_log/: .MakeBones
deprecated/test/autotest/: Makefile  Makefile.in  atconfig  testsuite.at  testsuite.at.in  testsuite.at.in.NO_TDIRECTORY
deprecated/utils/: .MakeBones
fuse/: CMakeLists.txt  Makefile  Makefile.in  Makefile.in.orig  Single UNIX Specification.url  fuse-expand.c
lib/: Makefile  Makefile.am  Makefile.in
src/base/: .ns.c.swp  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  darray.c  debug_msg.c  dtable.c  env.c  files_posix.c  filesystem.c  filesystem_low.c  filesystem_low2.c  math_misc.c  ns.c  ns_tcp.c  path_misc.c  service_socket.c  socket.c  socket_ip4.c  socket_ip6.c  string_misc.c  syscall_proxies.c  time_misc.c  trace_msg.c  urlstr.c  utils.c  workers.c  workers_ondemand.c  workers_pool.c
src/base/.deps/: darray.Po  debug_msg.Po  dtable.Po  math_misc.Po  string_misc.Po  time_misc.Po  trace_msg.Po  urlstr.Po
src/base_cpp/: CMakeLists.txt  debug.hpp  ns.hpp  socket.cpp  socket.hpp  timer.hpp  workers.cpp  workers.hpp  workers_on_demand.cpp  workers_on_demand.hpp  workers_pool.cpp  workers_pool.hpp  workers_sequential.cpp  workers_sequential.hpp  xpn_env.cpp  xpn_env.hpp  xpn_path.cpp  xpn_path.hpp  xpn_socket.cpp  xpn_socket.hpp  xpn_stats.hpp
src/bindings/: CMakeLists.txt  Makefile  xpn.i
src/bindings/java/: CMakeLists.txt
src/bypass/: CMakeLists.txt  Makefile  Makefile.in  xpn_bypass.c  xpn_bypass.h  xpn_proxy_client.c  xpn_proxy_server.c
src/mq_server/: Makefile.am  README.md  mq_server.c  mq_server_comm.c  mq_server_d2xpn.c  mq_server_ops.c  mq_server_params.c
src/utils/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cp-local2xpn  cp-local2xpn.c  cp-xpn2local  cp-xpn2local.c  d2xpn  d2xpn.c  lsxpn  make_bundle.sh  mkdirxpn  mkdirxpn.c  prueba.sh  removexpn  removexpn.c  rmdirxpn  statfsxpn  test-1.sh  test.sh  xpn-cat  xpn-cat.c  xpn-ls-old.c  xpn-ls.c  xpn-mkdir  xpn-mkdir.c  xpn-rm  xpn-rm.c  xpn-rmdir  xpn-rmdir.c  xpn-statfs  xpn-statfs.c  xpn.conf.example.xml  xpn.conf.example.yaml  xpn2d  xpn2d.c  xpn_cp  xpn_cp.c  xpn_expand  (+42 more)
src/utils/filtro_bmp/: cp-globus-expand.sh  cp_expand_256KB.xml  globus-posix-expand.sh  text.xml  tiempos.txt
src/xpn_client/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  stHsJJz9  xpn.h  xpn_api_mutex.c  xpn_api_mutex.cpp  xpn_directory.c  xpn_ffile.c  xpn_file.c  xpn_fio.c  xpn_fs.c  xpn_io.c  xpn_stdio.c  xpn_stdio.cpp  xpn_unistd.c  xpn_unistd.cpp
src/xpn_client/nfi/: CMakeLists.txt  nfi_server.cpp  nfi_server.hpp  nfi_xpn_server_comm.cpp  nfi_xpn_server_comm.hpp
src/xpn_client/xpn/: CMakeLists.txt  xpn_api.hpp  xpn_conf.cpp  xpn_conf.hpp  xpn_env.cpp  xpn_env.hpp  xpn_file.hpp  xpn_file_table.hpp  xpn_init.cpp  xpn_init.hpp  xpn_metadata.cpp  xpn_metadata.hpp  xpn_partition.cpp  xpn_partition.hpp  xpn_rw.hpp  xpn_stats.hpp
src/xpn_client/xpn2/: xpn2_creat.c  xpn2_destroy.c  xpn2_ioctl.c  xpn2_lseek.c  xpn2_open.c  xpn2_read.c  xpn2_write.c
src/xpn_server/: CMakeLists.txt  Makefile.am  Makefile.in  xpn_server  xpn_server.c  xpn_server.cpp  xpn_server.hpp  xpn_server_comm.c  xpn_server_comm.cpp  xpn_server_comm.hpp  xpn_server_ops.c  xpn_server_ops.cpp  xpn_server_ops.hpp  xpn_server_params.c  xpn_server_params.cpp  xpn_server_params.hpp  xpn_stop_server
src/xpn_server/mpi_server/: mpi_server_comm.c  mpi_server_comm.cpp  mpi_server_comm.hpp
src/xpn_server/sck_server/: mq_server_comm.c  mq_server_ops.c  mq_server_utils.c  sck_server_comm.c  sck_server_comm.cpp  sck_server_comm.hpp
test/autotest/: Makefile  Makefile.am  Makefile.in  atconfig
test/integrity/bypass_c/: CMakeLists.txt  Makefile.in  open-read-close.c  open-write-close.c  run_preload.sh  xpn.conf
test/performance/xpn/: CMakeLists.txt  Makefile.in  create-dirs-test  create-dirs-test.c  open-read-close  open-read-close.c  open-write-close  open-write-close.c  posix-create-dirs-test.c  remove-dirs-test  remove-dirs-test.c  rnd-write-read-cmp.c  xpn-create-dirs-test.c  xpn-open-write-close.c
test/performance/xpn-fault-tolerant/: CMakeLists.txt  Makefile.in  kill-server.sh  revive-servers.sh  rnd-write-read-cmp.c  server-write-read.c  stop-server.sh  write-server-read.c
(+3334 files in other folders)
